// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Story Snapshots: Default should match snapshot 1`] = `
<View
  style={
    {
      "minHeight": 200,
      "padding": 24,
    }
  }
>
  <View
    style={
      {
        "marginBottom": 16,
      }
    }
  >
    <View
      style={
        [
          {
            "height": 0.5,
          },
          undefined,
          {
            "backgroundColor": "#CBCED1",
          },
        ]
      }
    />
    <ExternalKeyboardView
      canBeFocused={true}
      enableA11yFocus={false}
      enableContextMenu={false}
      group={false}
      haloEffect={true}
      hasKeyDownPress={false}
      hasKeyUpPress={true}
      hasOnFocusChanged={true}
      lockFocus={0}
      onContextMenuPress={[Function]}
      onFocusChange={[Function]}
      onKeyUpPress={[Function]}
      orderIndex={-1}
      screenAutoA11yFocusDelay={300}
      style={
        [
          undefined,
          undefined,
        ]
      }
    >
      <RNGestureHandlerButton
        activeOpacity={1}
        collapsable={false}
        delayLongPress={600}
        enabled={true}
        handlerTag={-1}
        handlerType="NativeViewGestureHandler"
        innerRef={null}
        onActiveStateChange={[Function]}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onPress={[Function]}
        rippleColor="#E4E7EA"
        style={
          [
            {
              "backgroundColor": "#FFFFFF",
              "borderRadius": undefined,
              "margin": undefined,
              "marginBottom": undefined,
              "marginEnd": undefined,
              "marginHorizontal": undefined,
              "marginLeft": undefined,
              "marginRight": undefined,
              "marginStart": undefined,
              "marginTop": undefined,
              "marginVertical": undefined,
            },
            {
              "cursor": undefined,
            },
          ]
        }
        underlayColor="#E4E7EA"
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#E4E7EA",
              "borderBottomLeftRadius": undefined,
              "borderBottomRightRadius": undefined,
              "borderRadius": undefined,
              "borderTopLeftRadius": undefined,
              "borderTopRightRadius": undefined,
              "bottom": 0,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          style={{}}
        >
          <View
            accessibilityLabel="Voice call"
            accessibilityRole="button"
            accessible={true}
            style={
              [
                {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "paddingHorizontal": 12,
                },
                undefined,
                {
                  "height": 46,
                },
              ]
            }
            testID="room-actions-voice-call"
          >
            <View
              style={
                {
                  "paddingRight": 12,
                }
              }
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    [
                      {
                        "color": "#2F343D",
                        "fontSize": 24,
                      },
                      [
                        {
                          "lineHeight": 24,
                        },
                        undefined,
                      ],
                      {
                        "fontFamily": "custom",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  
                </Text>
              </View>
            </View>
            <View
              style={
                {
                  "flex": 1,
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "flex": 1,
                        "flexShrink": 1,
                        "fontFamily": "Inter",
                        "fontSize": 16,
                        "fontWeight": "500",
                        "textAlign": "left",
                      },
                      undefined,
                      {
                        "color": "#2F343D",
                      },
                    ]
                  }
                >
                  Voice call
                </Text>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "paddingLeft": 12,
                  },
                  {},
                ]
              }
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    {},
                  ]
                }
              >
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    [
                      {
                        "color": "#2F343D",
                        "fontSize": 24,
                      },
                      [
                        {
                          "lineHeight": 24,
                        },
                        undefined,
                      ],
                      {
                        "fontFamily": "custom",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  
                </Text>
              </View>
            </View>
          </View>
        </View>
      </RNGestureHandlerButton>
    </ExternalKeyboardView>
    <View
      style={
        [
          {
            "height": 0.5,
          },
          undefined,
          {
            "backgroundColor": "#CBCED1",
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`Story Snapshots: Disabled should match snapshot 1`] = `
<View
  style={
    {
      "minHeight": 200,
      "padding": 24,
    }
  }
>
  <View
    style={
      {
        "marginBottom": 16,
      }
    }
  >
    <View
      style={
        [
          {
            "height": 0.5,
          },
          undefined,
          {
            "backgroundColor": "#CBCED1",
          },
        ]
      }
    />
    <ExternalKeyboardView
      canBeFocused={true}
      enableA11yFocus={false}
      enableContextMenu={false}
      group={false}
      haloEffect={true}
      hasKeyDownPress={false}
      hasKeyUpPress={true}
      hasOnFocusChanged={true}
      lockFocus={0}
      onContextMenuPress={[Function]}
      onFocusChange={[Function]}
      onKeyUpPress={[Function]}
      orderIndex={-1}
      screenAutoA11yFocusDelay={300}
      style={
        [
          undefined,
          undefined,
        ]
      }
    >
      <RNGestureHandlerButton
        activeOpacity={1}
        collapsable={false}
        delayLongPress={600}
        enabled={true}
        handlerTag={-1}
        handlerType="NativeViewGestureHandler"
        innerRef={null}
        onActiveStateChange={[Function]}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onPress={[Function]}
        rippleColor="#E4E7EA"
        style={
          [
            {
              "backgroundColor": "#FFFFFF",
              "borderRadius": undefined,
              "margin": undefined,
              "marginBottom": undefined,
              "marginEnd": undefined,
              "marginHorizontal": undefined,
              "marginLeft": undefined,
              "marginRight": undefined,
              "marginStart": undefined,
              "marginTop": undefined,
              "marginVertical": undefined,
            },
            {
              "cursor": undefined,
            },
          ]
        }
        underlayColor="#E4E7EA"
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#E4E7EA",
              "borderBottomLeftRadius": undefined,
              "borderBottomRightRadius": undefined,
              "borderRadius": undefined,
              "borderTopLeftRadius": undefined,
              "borderTopRightRadius": undefined,
              "bottom": 0,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          style={{}}
        >
          <View
            accessibilityLabel="Voice call"
            accessibilityRole="button"
            accessible={true}
            style={
              [
                {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "paddingHorizontal": 12,
                },
                {
                  "opacity": 0.3,
                },
                {
                  "height": 46,
                },
              ]
            }
            testID="room-actions-voice-call"
          >
            <View
              style={
                {
                  "paddingRight": 12,
                }
              }
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    [
                      {
                        "color": "#2F343D",
                        "fontSize": 24,
                      },
                      [
                        {
                          "lineHeight": 24,
                        },
                        undefined,
                      ],
                      {
                        "fontFamily": "custom",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  
                </Text>
              </View>
            </View>
            <View
              style={
                {
                  "flex": 1,
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "flex": 1,
                        "flexShrink": 1,
                        "fontFamily": "Inter",
                        "fontSize": 16,
                        "fontWeight": "500",
                        "textAlign": "left",
                      },
                      undefined,
                      {
                        "color": "#2F343D",
                      },
                    ]
                  }
                >
                  Voice call
                </Text>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "paddingLeft": 12,
                  },
                  {},
                ]
              }
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    {},
                  ]
                }
              >
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    [
                      {
                        "color": "#2F343D",
                        "fontSize": 24,
                      },
                      [
                        {
                          "lineHeight": 24,
                        },
                        undefined,
                      ],
                      {
                        "fontFamily": "custom",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  
                </Text>
              </View>
            </View>
          </View>
        </View>
      </RNGestureHandlerButton>
    </ExternalKeyboardView>
    <View
      style={
        [
          {
            "height": 0.5,
          },
          undefined,
          {
            "backgroundColor": "#CBCED1",
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`Story Snapshots: NoVoiceCall should match snapshot 1`] = `
<View
  style={
    {
      "minHeight": 200,
      "padding": 24,
    }
  }
>
  <View
    style={
      {
        "marginBottom": 16,
      }
    }
  >
    <View
      style={
        [
          {
            "height": 0.5,
          },
          undefined,
          {
            "backgroundColor": "#CBCED1",
          },
        ]
      }
    />
    <ExternalKeyboardView
      canBeFocused={true}
      enableA11yFocus={false}
      enableContextMenu={false}
      group={false}
      haloEffect={true}
      hasKeyDownPress={false}
      hasKeyUpPress={true}
      hasOnFocusChanged={true}
      lockFocus={0}
      onContextMenuPress={[Function]}
      onFocusChange={[Function]}
      onKeyUpPress={[Function]}
      orderIndex={-1}
      screenAutoA11yFocusDelay={300}
      style={
        [
          undefined,
          undefined,
        ]
      }
    >
      <RNGestureHandlerButton
        activeOpacity={1}
        collapsable={false}
        delayLongPress={600}
        enabled={true}
        handlerTag={-1}
        handlerType="NativeViewGestureHandler"
        innerRef={null}
        onActiveStateChange={[Function]}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onPress={[Function]}
        rippleColor="#E4E7EA"
        style={
          [
            {
              "backgroundColor": "#FFFFFF",
              "borderRadius": undefined,
              "margin": undefined,
              "marginBottom": undefined,
              "marginEnd": undefined,
              "marginHorizontal": undefined,
              "marginLeft": undefined,
              "marginRight": undefined,
              "marginStart": undefined,
              "marginTop": undefined,
              "marginVertical": undefined,
            },
            {
              "cursor": undefined,
            },
          ]
        }
        underlayColor="#E4E7EA"
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#E4E7EA",
              "borderBottomLeftRadius": undefined,
              "borderBottomRightRadius": undefined,
              "borderRadius": undefined,
              "borderTopLeftRadius": undefined,
              "borderTopRightRadius": undefined,
              "bottom": 0,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          style={{}}
        >
          <View
            accessibilityLabel="Voice call"
            accessibilityRole="button"
            accessible={true}
            style={
              [
                {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "paddingHorizontal": 12,
                },
                undefined,
                {
                  "height": 46,
                },
              ]
            }
            testID="room-actions-voice-call"
          >
            <View
              style={
                {
                  "paddingRight": 12,
                }
              }
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    [
                      {
                        "color": "#2F343D",
                        "fontSize": 24,
                      },
                      [
                        {
                          "lineHeight": 24,
                        },
                        undefined,
                      ],
                      {
                        "fontFamily": "custom",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  
                </Text>
              </View>
            </View>
            <View
              style={
                {
                  "flex": 1,
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "flex": 1,
                        "flexShrink": 1,
                        "fontFamily": "Inter",
                        "fontSize": 16,
                        "fontWeight": "500",
                        "textAlign": "left",
                      },
                      undefined,
                      {
                        "color": "#2F343D",
                      },
                    ]
                  }
                >
                  Voice call
                </Text>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "paddingLeft": 12,
                  },
                  {},
                ]
              }
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    {},
                  ]
                }
              >
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    [
                      {
                        "color": "#2F343D",
                        "fontSize": 24,
                      },
                      [
                        {
                          "lineHeight": 24,
                        },
                        undefined,
                      ],
                      {
                        "fontFamily": "custom",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  
                </Text>
              </View>
            </View>
          </View>
        </View>
      </RNGestureHandlerButton>
    </ExternalKeyboardView>
    <View
      style={
        [
          {
            "height": 0.5,
          },
          undefined,
          {
            "backgroundColor": "#CBCED1",
          },
        ]
      }
    />
  </View>
</View>
`;
